fix: filters, feature: timestamps in models
